fixed horizontal scroll

--- a/sass/partials/_home.scss
+++ b/sass/partials/_home.scss
@@ -92,6 +92,8 @@
         position: absolute;
         bottom: 0;
         height: 180px;
+        left: 0;
+        max-width: 100%;
     }
     .row {
         max-width: 1200px; width: 100%;
